<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SecondApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="dataTitle">The data on the cards is:<br>A:     B:</br></string>
    <string name="button_refresh">Refresh</string>
    <string name="delete">To delete data off card A or B click the corresponding button that follows</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="consolidate">To consolidate the data onto a card click the corresponding button that follows</string>
    <string name="swap">Swap</string>
    <string name="toSwap">To swap the card data press the button below</string>
    <string name="dataToSend">To send data to a card enter it in the text box below and click the corresponding button to send it to the card of your choice</string>
    <string name="sendDataField">Type data here</string>
    <string name="sendButton">Send</string>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="grey">#333333</color>
</resources>
