<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/button_refresh"
        android:onClick="refresh"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="The data on the cards is:"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
    />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="A:"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TextViewA"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="B:"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TextViewB"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical">
         <TextView
          style="@style/textDisp"
         android:text="@string/delete"
         />
              <LinearLayout
                  android:layout_width="fill_parent"
                 android:layout_height="wrap_content">
                 <Button
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:layout_marginLeft="16dip"
                      android:layout_marginRight="8dip"
                      android:text="@string/A"
                      android:onClick="deleteA"/>
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:layout_marginLeft="8dip"
                     android:layout_marginRight="16dip"
                     android:text="@string/B"
                     android:onClick="deleteB"/>
              </LinearLayout>
          <TextView
              style="@style/textDisp"
              android:text="@string/consolidate"/>
         <LinearLayout
               android:layout_width="fill_parent"
               android:layout_height="wrap_content">
              <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginLeft="16dip"
                 android:layout_marginRight="8dip"
                 android:text="@string/A"
                 android:onClick="conA"/>
              <Button
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:layout_marginLeft="8dip"
                  android:layout_marginRight="16dip"
                  android:text="@string/B"
                  android:onClick="conB"/>
          </LinearLayout>
          <TextView
               style="@style/textDisp"
               android:text="@string/toSwap"/>
          <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:text="@string/swap"
               android:onClick="swap"/>
     </LinearLayout>
    </ScrollView>
</LinearLayout>
